fix: horizontal overflow and dropdown portal

--- a/website/app/components/preview/Configure.module.css
+++ b/website/app/components/preview/Configure.module.css
@@ -35,6 +35,7 @@
 .scroll-wrapper {
 	width: rem(332px);
 	margin-left: auto;
+	overflow-x: hidden;
 
 	border-radius: 4px;
 
